# Memory

./: .clang-format  CMakeLists.txt
Memory/: CMakeLists.txt
Memory/inc/: CMakeLists.txt
Memory/inc/common/: CMakeLists.txt  CardUtil.hpp  ComponentBackgroundColorConstants.hpp  GUIUtils.hpp  GameData.hpp  HudUtil.hpp  Math.hpp  Result.hpp  ScreenSize.hpp
Memory/inc/entry/: CMakeLists.txt  Memory.hpp
Memory/inc/game/: CMakeLists.txt
Memory/inc/game/animations/: AnimationBase.hpp  CMakeLists.txt  CardFlipAnimation.hpp  ScreenSwapAnimation.hpp  SfinaeHelpers.hpp  TableRotationAnimation.hpp  Timeout.hpp
Memory/inc/game/objects/: Board.hpp  CMakeLists.txt  Card.hpp  Player.hpp  TableHud.hpp
Memory/inc/game/state/: CMakeLists.txt  State.hpp  StateFactory.hpp  StateMachine.hpp
Memory/inc/resource/: CMakeLists.txt
Memory/inc/resource/gui/: CMakeLists.txt  ComponentFactory.hpp  GUILoader.hpp
Memory/inc/resource/managers/: Manager.hpp  ResourceHolder.hpp
Memory/src/: CMakeLists.txt
Memory/src/common/: CMakeLists.txt  GameData.cpp
Memory/src/entry/: CMakeLists.txt  Memory.cpp  main.cpp
Memory/src/game/: CMakeLists.txt
Memory/src/game/animations/: CMakeLists.txt  CardFlipAnimation.cpp  ScreenSwapAnimation.cpp  TableRotationAnimation.cpp  Timeout.cpp
Memory/src/game/objects/: Board.cpp  CMakeLists.txt  Card.cpp  Player.cpp  TableHud.cpp
Memory/src/game/state/: CMakeLists.txt  StateMachine.cpp
Memory/src/resource/: CMakeLists.txt
Memory/src/resource/gui/: CMakeLists.txt  GUILoader.cpp
Memory/src/resource/managers/: CMakeLists.txt  ResourceHolder.cpp
cmake/: CopyDLL.cmake  FindSFML.cmake  ProjectSetup.cmake
resource/xml/: Font.xml  Sound.xml  Textures.xml
resource/xml/state/: StateConfig.xml
(+95 files in other folders)
